--- a/ejemploWebHook/package.json
+++ b/ejemploWebHook/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jade": "^1.11.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
