--- a/ejemploWebHook/package.json
+++ b/ejemploWebHook/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   },
   "devDependencies": {
